[project]
name = "lob-client"
version = "0.1.0"
description = "Client library for subscribing to LOB model signals."
readme = "README.md"
authors = [
    { name = "kbaltakys", email = "kbaltakys@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "websockets>=15.0",
]

[project.scripts]
lob-client = "lob_client:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
]
